# linux_dev_course2024

01_TerminalProject/: Makefile  main.c
02_Multifile/: Makefile
03_Text/: randomize.sh
04_Debugging/: Makefile  gdb-test-1.txt  gdb-test-2.txt  range.c
05_Regexps/: Makefile  correct-test-1-stderr.txt  correct-test-2-stderr.txt  correct-test-3-stderr.txt  correct-test-4-stdout.txt  correct-test-5-stdout.txt  correct-test-6-stdout.txt  correct-test-7-stdout.txt  esub.c
06_Tracing/: Makefile  move.c  protect.c  test.sh
07_Environmental/: CMakeLists.txt  rhasher.c  test.sh
08_I18n/: CMakeLists.txt
08_I18n/po/ru/: binsearch.po
08_I18n/src/: binsearch.c
09_PatchDiff/: Makefile  floorwall_size.patch  maze.c  seed_floorwall_size.patch  size.patch
10_LibTesting/: CMakeLists.txt  tests.c
10_LibTesting/src/: buf.c  buf.h
11_Documenting/: CMakeLists.txt
11_Documenting/src/: binsearch.c
12_InstallPackaging/: CMakeLists.txt  binsearch.3  remove.sh
12_InstallPackaging/po/ru/: binsearch.po
12_InstallPackaging/src/: binsearch.c  binsearch.h  main.md
12_InstallPackaging/tests/: tests.c
